--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/get-unstuck/discord-bot-v1#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.1.3",
     "axios": "^1.1.3",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
